monticore-generator/src/test/resources/cocos/invalid/A4022/A4022b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4022;

grammar A4022b {

  A extends B;

  B extends A;

}
